--- a/package.json
+++ b/package.json
@@ -12,7 +12,21 @@
   "dependencies": {
     "express": "^4.16.1",
     "ejs": "^2.5.7",
-    "express-ejs-layouts": "^2.3.1"
+    "express-ejs-layouts": "^2.3.1",
+    "express-session": "^1.15.6",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "morgan": "^1.9.0",
+    "method-override": "^2.3.10",
+    "mongoose": "^4.12.4",
+    "bcrypt-nodejs": "^0.0.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "dotenv": "^4.0.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.0",
+    "passport.socketio": "^3.7.0",
+    "socket.io": "^2.0.4"
   },
   "engines": {
     "node": "8.x"
