ng bien, por edit y forms y hash

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "connect-mongo": "^2.0.0",
     "passport.socketio": "^3.7.0",
     "socket.io": "^2.0.4",
-    "express-validator": "^4.2.1"
+    "express-validator": "^4.2.1",
+    "node-emoji": "^1.8.1"
   },
   "engines": {
     "node": "8.x"
