--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "//1": "describes your app and its dependencies",
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
-  "name": "my-glitch-app",
+  "name": "bestalk-app",
   "version": "0.0.1",
-  "description": "What am I about?",
+  "description": "a ideal language page",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
