--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "passport.socketio": "^3.7.0",
     "socket.io": "^2.0.4",
     "express-validator": "^4.2.1",
-    "node-emoji": "^1.8.1"
+    "node-emoji": "^1.8.1",
+    "nodemailer": "^4.4.1"
   },
   "engines": {
     "node": "8.x"
